example/lib/src/generated/errors/errors_localization_fr.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for French (`fr`).
class ErrorsLocalizationFr extends ErrorsLocalization {
  ErrorsLocalizationFr([String locale = 'fr']) : super(locale);

  @override
  String get error => 'Une erreur s\'est produite';

  @override
  String get unexpectedError => 'Une erreur inattendue s\'est produite';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError':
            'Le mot de passe doit contenir au moins 6 caractères',
        'invalidEmailOrPhoneNumberError':
            'Veuillez fournir un email valide ou un numéro de téléphone au format international. Exemples : me@example.com et +1234567890987',
        'invalidEmailError': 'L\'email n\'est pas valide',
        'operationNotAllowedError': 'Opération non autorisée',
        'weakPasswordError': 'Le mot de passe est trop faible',
        'userTokenExpiredError': 'Le jeton utilisateur a expiré',
        'invalidPhoneNumberError':
            'Veuillez fournir des numéros de téléphone au format international, commençant par + et l\'indicatif du pays.',
        'invalidActionCodeError': 'Le code d\'action n\'est pas valide',
        'networkRequestFailedError': 'La requête réseau a échoué',
        'tooManyRequestsError': 'Trop de demandes',
        'acceptTermsAndConditionsError':
            'Veuillez accepter les termes et conditions et reconnaître la politique de confidentialité.',
        'acceptAIConsentError':
            'Veuillez reconnaître que les consultations se font avec une IA et non un professionnel de santé agréé.',
        'emailOrPhoneError': 'Erreur d\'email ou de téléphone',
        'passwordError': 'Erreur de mot de passe',
        'unknownError': 'Erreur inconnue',
        'googleSSOError': 'Erreur Google SSO',
        'emailAlreadyInUse':
            'L\'adresse email est déjà utilisée par un autre compte.',
        'invalidCredentialError': 'Identifiants invalides',
        'invalidAppCredentialError': 'Identifiants d\'application invalides',
        'invalidVerificationCodeError': 'Code de vérification invalide',
        'other': 'Erreur inconnue',
      },
    );
    return '$_temp0\n';
  }

  @override
  String get bugReportSentText => 'Rapport de bogue envoyé avec succès.';
}
